--- a/responsive-layout-a.html
+++ b/responsive-layout-a.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0"
     />
     <link rel="stylesheet" href="responsive-styles-a.css" />
-    <title>Document</title>
+    <title>layout-1</title>
   </head>
   <body>
     <div class="container">
